SpringSemester2022/Week5_Lex/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DAY
    H2_CLOSE_TAG
    H2_OPEN_TAG
    H3_CLOSE_TAG
    H3_OPEN_TAG
    MONTH
    ON
    PARA_CLOSE
    PARA_START
    P_CLOSE
    SPAN_CLOSE
    SPAN_DATE

Grammar

Rule 0     S' -> start
Rule 1     start -> YEAR
Rule 2     start -> year2
Rule 3     start -> data
Rule 4     year2 -> YEAR2
Rule 5     data -> P_OPEN
Rule 6     start -> DATE PARA_DATA
Rule 7     start -> continent_data
Rule 8     start -> world_data
Rule 9     start -> country_data
Rule 10    continent_data -> TR_CONTINENT_OPEN TD TD_OPEN NOBR TD_CLOSE TD TD TD TD TD TD TD TD TD TD TD TD TD
Rule 11    world_data -> TB_WORLD TR_CLASS TD TD_STRONG TD TD TD TD TD TD TD TD TD TD TD TD
Rule 12    country_data -> TD_COUNTRY TD TD TD TD TD TD TD TD TD TD TD TD TD
Rule 13    country_data -> TD_COUNTRY_SPAN TD TD TD TD TD TD TD TD TD TD TD TD TD
Rule 14    country_data -> TD_COUNTRY TD TD TD TD TD TD TD TD TD TD TD TD TD_A
Rule 15    country_data -> TD_COUNTRY_SPAN TD TD TD TD TD TD TD TD TD TD TD TD TD_A

Terminals, with rules where they appear

DATE                 : 6
DAY                  : 
H2_CLOSE_TAG         : 
H2_OPEN_TAG          : 
H3_CLOSE_TAG         : 
H3_OPEN_TAG          : 
MONTH                : 
NOBR                 : 10
ON                   : 
PARA_CLOSE           : 
PARA_DATA            : 6
PARA_START           : 
P_CLOSE              : 
P_OPEN               : 5
SPAN_CLOSE           : 
SPAN_DATE            : 
TB_WORLD             : 11
TD                   : 10 10 10 10 10 10 10 10 10 10 10 10 10 10 11 11 11 11 11 11 11 11 11 11 11 11 11 12 12 12 12 12 12 12 12 12 12 12 12 12 13 13 13 13 13 13 13 13 13 13 13 13 13 14 14 14 14 14 14 14 14 14 14 14 14 15 15 15 15 15 15 15 15 15 15 15 15
TD_A                 : 14 15
TD_CLOSE             : 10
TD_COUNTRY           : 12 14
TD_COUNTRY_SPAN      : 13 15
TD_OPEN              : 10
TD_STRONG            : 11
TR_CLASS             : 11
TR_CONTINENT_OPEN    : 10
YEAR                 : 1
YEAR2                : 4
error                : 

Nonterminals, with rules where they appear

continent_data       : 7
country_data         : 9
data                 : 3
start                : 0
world_data           : 8
year2                : 2

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . YEAR
    (2) start -> . year2
    (3) start -> . data
    (6) start -> . DATE PARA_DATA
    (7) start -> . continent_data
    (8) start -> . world_data
    (9) start -> . country_data
    (4) year2 -> . YEAR2
    (5) data -> . P_OPEN
    (10) continent_data -> . TR_CONTINENT_OPEN TD TD_OPEN NOBR TD_CLOSE TD TD TD TD TD TD TD TD TD TD TD TD TD
    (11) world_data -> . TB_WORLD TR_CLASS TD TD_STRONG TD TD TD TD TD TD TD TD TD TD TD TD
    (12) country_data -> . TD_COUNTRY TD TD TD TD TD TD TD TD TD TD TD TD TD
    (13) country_data -> . TD_COUNTRY_SPAN TD TD TD TD TD TD TD TD TD TD TD TD TD
    (14) country_data -> . TD_COUNTRY TD TD TD TD TD TD TD TD TD TD TD TD TD_A
    (15) country_data -> . TD_COUNTRY_SPAN TD TD TD TD TD TD TD TD TD TD TD TD TD_A

    YEAR            shift and go to state 2
    DATE            shift and go to state 5
    YEAR2           shift and go to state 9
    P_OPEN          shift and go to state 10
    TR_CONTINENT_OPEN shift and go to state 11
    TB_WORLD        shift and go to state 12
    TD_COUNTRY      shift and go to state 13
    TD_COUNTRY_SPAN shift and go to state 14

    start                          shift and go to state 1
    year2                          shift and go to state 3
    data                           shift and go to state 4
    continent_data                 shift and go to state 6
    world_data                     shift and go to state 7
    country_data                   shift and go to state 8

state 1

    (0) S' -> start .



state 2

    (1) start -> YEAR .

    $end            reduce using rule 1 (start -> YEAR .)


state 3

    (2) start -> year2 .

    $end            reduce using rule 2 (start -> year2 .)


state 4

    (3) start -> data .

    $end            reduce using rule 3 (start -> data .)


state 5

    (6) start -> DATE . PARA_DATA

    PARA_DATA       shift and go to state 15


state 6

    (7) start -> continent_data .

    $end            reduce using rule 7 (start -> continent_data .)


state 7

    (8) start -> world_data .

    $end            reduce using rule 8 (start -> world_data .)


state 8

    (9) start -> country_data .

    $end            reduce using rule 9 (start -> country_data .)


state 9

    (4) year2 -> YEAR2 .

    $end            reduce using rule 4 (year2 -> YEAR2 .)


state 10

    (5) data -> P_OPEN .

    $end            reduce using rule 5 (data -> P_OPEN .)


state 11

    (10) continent_data -> TR_CONTINENT_OPEN . TD TD_OPEN NOBR TD_CLOSE TD TD TD TD TD TD TD TD TD TD TD TD TD

    TD              shift and go to state 16


state 12

    (11) world_data -> TB_WORLD . TR_CLASS TD TD_STRONG TD TD TD TD TD TD TD TD TD TD TD TD

    TR_CLASS        shift and go to state 17


state 13

    (12) country_data -> TD_COUNTRY . TD TD TD TD TD TD TD TD TD TD TD TD TD
    (14) country_data -> TD_COUNTRY . TD TD TD TD TD TD TD TD TD TD TD TD TD_A

    TD              shift and go to state 18


state 14

    (13) country_data -> TD_COUNTRY_SPAN . TD TD TD TD TD TD TD TD TD TD TD TD TD
    (15) country_data -> TD_COUNTRY_SPAN . TD TD TD TD TD TD TD TD TD TD TD TD TD_A

    TD              shift and go to state 19


state 15

    (6) start -> DATE PARA_DATA .

    $end            reduce using rule 6 (start -> DATE PARA_DATA .)


state 16

    (10) continent_data -> TR_CONTINENT_OPEN TD . TD_OPEN NOBR TD_CLOSE TD TD TD TD TD TD TD TD TD TD TD TD TD

    TD_OPEN         shift and go to state 20


state 17

    (11) world_data -> TB_WORLD TR_CLASS . TD TD_STRONG TD TD TD TD TD TD TD TD TD TD TD TD

    TD              shift and go to state 21


state 18

    (12) country_data -> TD_COUNTRY TD . TD TD TD TD TD TD TD TD TD TD TD TD
    (14) country_data -> TD_COUNTRY TD . TD TD TD TD TD TD TD TD TD TD TD TD_A

    TD              shift and go to state 22


state 19

    (13) country_data -> TD_COUNTRY_SPAN TD . TD TD TD TD TD TD TD TD TD TD TD TD
    (15) country_data -> TD_COUNTRY_SPAN TD . TD TD TD TD TD TD TD TD TD TD TD TD_A

    TD              shift and go to state 23


state 20

    (10) continent_data -> TR_CONTINENT_OPEN TD TD_OPEN . NOBR TD_CLOSE TD TD TD TD TD TD TD TD TD TD TD TD TD

    NOBR            shift and go to state 24


state 21

    (11) world_data -> TB_WORLD TR_CLASS TD . TD_STRONG TD TD TD TD TD TD TD TD TD TD TD TD

    TD_STRONG       shift and go to state 25


state 22

    (12) country_data -> TD_COUNTRY TD TD . TD TD TD TD TD TD TD TD TD TD TD
    (14) country_data -> TD_COUNTRY TD TD . TD TD TD TD TD TD TD TD TD TD TD_A

    TD              shift and go to state 26


state 23

    (13) country_data -> TD_COUNTRY_SPAN TD TD . TD TD TD TD TD TD TD TD TD TD TD
    (15) country_data -> TD_COUNTRY_SPAN TD TD . TD TD TD TD TD TD TD TD TD TD TD_A

    TD              shift and go to state 27


state 24

    (10) continent_data -> TR_CONTINENT_OPEN TD TD_OPEN NOBR . TD_CLOSE TD TD TD TD TD TD TD TD TD TD TD TD TD

    TD_CLOSE        shift and go to state 28


state 25

    (11) world_data -> TB_WORLD TR_CLASS TD TD_STRONG . TD TD TD TD TD TD TD TD TD TD TD TD

    TD              shift and go to state 29


state 26

    (12) country_data -> TD_COUNTRY TD TD TD . TD TD TD TD TD TD TD TD TD TD
    (14) country_data -> TD_COUNTRY TD TD TD . TD TD TD TD TD TD TD TD TD TD_A

    TD              shift and go to state 30


state 27

    (13) country_data -> TD_COUNTRY_SPAN TD TD TD . TD TD TD TD TD TD TD TD TD TD
    (15) country_data -> TD_COUNTRY_SPAN TD TD TD . TD TD TD TD TD TD TD TD TD TD_A

    TD              shift and go to state 31


state 28

    (10) continent_data -> TR_CONTINENT_OPEN TD TD_OPEN NOBR TD_CLOSE . TD TD TD TD TD TD TD TD TD TD TD TD TD

    TD              shift and go to state 32


state 29

    (11) world_data -> TB_WORLD TR_CLASS TD TD_STRONG TD . TD TD TD TD TD TD TD TD TD TD TD

    TD              shift and go to state 33


state 30

    (12) country_data -> TD_COUNTRY TD TD TD TD . TD TD TD TD TD TD TD TD TD
    (14) country_data -> TD_COUNTRY TD TD TD TD . TD TD TD TD TD TD TD TD TD_A

    TD              shift and go to state 34


state 31

    (13) country_data -> TD_COUNTRY_SPAN TD TD TD TD . TD TD TD TD TD TD TD TD TD
    (15) country_data -> TD_COUNTRY_SPAN TD TD TD TD . TD TD TD TD TD TD TD TD TD_A

    TD              shift and go to state 35


state 32

    (10) continent_data -> TR_CONTINENT_OPEN TD TD_OPEN NOBR TD_CLOSE TD . TD TD TD TD TD TD TD TD TD TD TD TD

    TD              shift and go to state 36


state 33

    (11) world_data -> TB_WORLD TR_CLASS TD TD_STRONG TD TD . TD TD TD TD TD TD TD TD TD TD

    TD              shift and go to state 37


state 34

    (12) country_data -> TD_COUNTRY TD TD TD TD TD . TD TD TD TD TD TD TD TD
    (14) country_data -> TD_COUNTRY TD TD TD TD TD . TD TD TD TD TD TD TD TD_A

    TD              shift and go to state 38


state 35

    (13) country_data -> TD_COUNTRY_SPAN TD TD TD TD TD . TD TD TD TD TD TD TD TD
    (15) country_data -> TD_COUNTRY_SPAN TD TD TD TD TD . TD TD TD TD TD TD TD TD_A

    TD              shift and go to state 39


state 36

    (10) continent_data -> TR_CONTINENT_OPEN TD TD_OPEN NOBR TD_CLOSE TD TD . TD TD TD TD TD TD TD TD TD TD TD

    TD              shift and go to state 40


state 37

    (11) world_data -> TB_WORLD TR_CLASS TD TD_STRONG TD TD TD . TD TD TD TD TD TD TD TD TD

    TD              shift and go to state 41


state 38

    (12) country_data -> TD_COUNTRY TD TD TD TD TD TD . TD TD TD TD TD TD TD
    (14) country_data -> TD_COUNTRY TD TD TD TD TD TD . TD TD TD TD TD TD TD_A

    TD              shift and go to state 42


state 39

    (13) country_data -> TD_COUNTRY_SPAN TD TD TD TD TD TD . TD TD TD TD TD TD TD
    (15) country_data -> TD_COUNTRY_SPAN TD TD TD TD TD TD . TD TD TD TD TD TD TD_A

    TD              shift and go to state 43


state 40

    (10) continent_data -> TR_CONTINENT_OPEN TD TD_OPEN NOBR TD_CLOSE TD TD TD . TD TD TD TD TD TD TD TD TD TD

    TD              shift and go to state 44


state 41

    (11) world_data -> TB_WORLD TR_CLASS TD TD_STRONG TD TD TD TD . TD TD TD TD TD TD TD TD

    TD              shift and go to state 45


state 42

    (12) country_data -> TD_COUNTRY TD TD TD TD TD TD TD . TD TD TD TD TD TD
    (14) country_data -> TD_COUNTRY TD TD TD TD TD TD TD . TD TD TD TD TD TD_A

    TD              shift and go to state 46


state 43

    (13) country_data -> TD_COUNTRY_SPAN TD TD TD TD TD TD TD . TD TD TD TD TD TD
    (15) country_data -> TD_COUNTRY_SPAN TD TD TD TD TD TD TD . TD TD TD TD TD TD_A

    TD              shift and go to state 47


state 44

    (10) continent_data -> TR_CONTINENT_OPEN TD TD_OPEN NOBR TD_CLOSE TD TD TD TD . TD TD TD TD TD TD TD TD TD

    TD              shift and go to state 48


state 45

    (11) world_data -> TB_WORLD TR_CLASS TD TD_STRONG TD TD TD TD TD . TD TD TD TD TD TD TD

    TD              shift and go to state 49


state 46

    (12) country_data -> TD_COUNTRY TD TD TD TD TD TD TD TD . TD TD TD TD TD
    (14) country_data -> TD_COUNTRY TD TD TD TD TD TD TD TD . TD TD TD TD TD_A

    TD              shift and go to state 50


state 47

    (13) country_data -> TD_COUNTRY_SPAN TD TD TD TD TD TD TD TD . TD TD TD TD TD
    (15) country_data -> TD_COUNTRY_SPAN TD TD TD TD TD TD TD TD . TD TD TD TD TD_A

    TD              shift and go to state 51


state 48

    (10) continent_data -> TR_CONTINENT_OPEN TD TD_OPEN NOBR TD_CLOSE TD TD TD TD TD . TD TD TD TD TD TD TD TD

    TD              shift and go to state 52


state 49

    (11) world_data -> TB_WORLD TR_CLASS TD TD_STRONG TD TD TD TD TD TD . TD TD TD TD TD TD

    TD              shift and go to state 53


state 50

    (12) country_data -> TD_COUNTRY TD TD TD TD TD TD TD TD TD . TD TD TD TD
    (14) country_data -> TD_COUNTRY TD TD TD TD TD TD TD TD TD . TD TD TD TD_A

    TD              shift and go to state 54


state 51

    (13) country_data -> TD_COUNTRY_SPAN TD TD TD TD TD TD TD TD TD . TD TD TD TD
    (15) country_data -> TD_COUNTRY_SPAN TD TD TD TD TD TD TD TD TD . TD TD TD TD_A

    TD              shift and go to state 55


state 52

    (10) continent_data -> TR_CONTINENT_OPEN TD TD_OPEN NOBR TD_CLOSE TD TD TD TD TD TD . TD TD TD TD TD TD TD

    TD              shift and go to state 56


state 53

    (11) world_data -> TB_WORLD TR_CLASS TD TD_STRONG TD TD TD TD TD TD TD . TD TD TD TD TD

    TD              shift and go to state 57


state 54

    (12) country_data -> TD_COUNTRY TD TD TD TD TD TD TD TD TD TD . TD TD TD
    (14) country_data -> TD_COUNTRY TD TD TD TD TD TD TD TD TD TD . TD TD TD_A

    TD              shift and go to state 58


state 55

    (13) country_data -> TD_COUNTRY_SPAN TD TD TD TD TD TD TD TD TD TD . TD TD TD
    (15) country_data -> TD_COUNTRY_SPAN TD TD TD TD TD TD TD TD TD TD . TD TD TD_A

    TD              shift and go to state 59


state 56

    (10) continent_data -> TR_CONTINENT_OPEN TD TD_OPEN NOBR TD_CLOSE TD TD TD TD TD TD TD . TD TD TD TD TD TD

    TD              shift and go to state 60


state 57

    (11) world_data -> TB_WORLD TR_CLASS TD TD_STRONG TD TD TD TD TD TD TD TD . TD TD TD TD

    TD              shift and go to state 61


state 58

    (12) country_data -> TD_COUNTRY TD TD TD TD TD TD TD TD TD TD TD . TD TD
    (14) country_data -> TD_COUNTRY TD TD TD TD TD TD TD TD TD TD TD . TD TD_A

    TD              shift and go to state 62


state 59

    (13) country_data -> TD_COUNTRY_SPAN TD TD TD TD TD TD TD TD TD TD TD . TD TD
    (15) country_data -> TD_COUNTRY_SPAN TD TD TD TD TD TD TD TD TD TD TD . TD TD_A

    TD              shift and go to state 63


state 60

    (10) continent_data -> TR_CONTINENT_OPEN TD TD_OPEN NOBR TD_CLOSE TD TD TD TD TD TD TD TD . TD TD TD TD TD

    TD              shift and go to state 64


state 61

    (11) world_data -> TB_WORLD TR_CLASS TD TD_STRONG TD TD TD TD TD TD TD TD TD . TD TD TD

    TD              shift and go to state 65


state 62

    (12) country_data -> TD_COUNTRY TD TD TD TD TD TD TD TD TD TD TD TD . TD
    (14) country_data -> TD_COUNTRY TD TD TD TD TD TD TD TD TD TD TD TD . TD_A

    TD              shift and go to state 66
    TD_A            shift and go to state 67


state 63

    (13) country_data -> TD_COUNTRY_SPAN TD TD TD TD TD TD TD TD TD TD TD TD . TD
    (15) country_data -> TD_COUNTRY_SPAN TD TD TD TD TD TD TD TD TD TD TD TD . TD_A

    TD              shift and go to state 68
    TD_A            shift and go to state 69


state 64

    (10) continent_data -> TR_CONTINENT_OPEN TD TD_OPEN NOBR TD_CLOSE TD TD TD TD TD TD TD TD TD . TD TD TD TD

    TD              shift and go to state 70


state 65

    (11) world_data -> TB_WORLD TR_CLASS TD TD_STRONG TD TD TD TD TD TD TD TD TD TD . TD TD

    TD              shift and go to state 71


state 66

    (12) country_data -> TD_COUNTRY TD TD TD TD TD TD TD TD TD TD TD TD TD .

    $end            reduce using rule 12 (country_data -> TD_COUNTRY TD TD TD TD TD TD TD TD TD TD TD TD TD .)


state 67

    (14) country_data -> TD_COUNTRY TD TD TD TD TD TD TD TD TD TD TD TD TD_A .

    $end            reduce using rule 14 (country_data -> TD_COUNTRY TD TD TD TD TD TD TD TD TD TD TD TD TD_A .)


state 68

    (13) country_data -> TD_COUNTRY_SPAN TD TD TD TD TD TD TD TD TD TD TD TD TD .

    $end            reduce using rule 13 (country_data -> TD_COUNTRY_SPAN TD TD TD TD TD TD TD TD TD TD TD TD TD .)


state 69

    (15) country_data -> TD_COUNTRY_SPAN TD TD TD TD TD TD TD TD TD TD TD TD TD_A .

    $end            reduce using rule 15 (country_data -> TD_COUNTRY_SPAN TD TD TD TD TD TD TD TD TD TD TD TD TD_A .)


state 70

    (10) continent_data -> TR_CONTINENT_OPEN TD TD_OPEN NOBR TD_CLOSE TD TD TD TD TD TD TD TD TD TD . TD TD TD

    TD              shift and go to state 72


state 71

    (11) world_data -> TB_WORLD TR_CLASS TD TD_STRONG TD TD TD TD TD TD TD TD TD TD TD . TD

    TD              shift and go to state 73


state 72

    (10) continent_data -> TR_CONTINENT_OPEN TD TD_OPEN NOBR TD_CLOSE TD TD TD TD TD TD TD TD TD TD TD . TD TD

    TD              shift and go to state 74


state 73

    (11) world_data -> TB_WORLD TR_CLASS TD TD_STRONG TD TD TD TD TD TD TD TD TD TD TD TD .

    $end            reduce using rule 11 (world_data -> TB_WORLD TR_CLASS TD TD_STRONG TD TD TD TD TD TD TD TD TD TD TD TD .)


state 74

    (10) continent_data -> TR_CONTINENT_OPEN TD TD_OPEN NOBR TD_CLOSE TD TD TD TD TD TD TD TD TD TD TD TD . TD

    TD              shift and go to state 75


state 75

    (10) continent_data -> TR_CONTINENT_OPEN TD TD_OPEN NOBR TD_CLOSE TD TD TD TD TD TD TD TD TD TD TD TD TD .

    $end            reduce using rule 10 (continent_data -> TR_CONTINENT_OPEN TD TD_OPEN NOBR TD_CLOSE TD TD TD TD TD TD TD TD TD TD TD TD TD .)

